# EmoDiary-backend

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6b09b3911c97_initial_migration.py
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: authentication.py  users.py
src/app/db/: session.py
src/app/models/: user.py  user_profile.py
src/app/repositories/: user_repository.py
src/app/schemas/: otp.py  token.py  user.py
src/app/services/: authentication_service.py  redis_service.py  user_service.py
src/app/utils/: config.py  jwt_service.py
